--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
+  background-color: #282c34;
+}
+
+.form {
+  margin: auto;
+  border: 1px solid whitesmoke;
+  border-radius: 30px;
+  background-color: whitesmoke;
+  color: #282c34;
+  height: 400px;
+  width: 450px;
+}
+
+.form h1 {
+  text-align: center;
+  background-color: #282c34;
+  color: #ffffff;
+  margin-top: 0%;
+  padding: 20px 0px;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+}
+
+form {
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  margin: auto;
+}
+
+div .sub {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+input {
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+}
+.sub:last-child {
+  margin-bottom: 0%;
+}
+
+button {
+  margin: auto;
+  margin-top: 20px;
+  padding: 8px 100px;
+  background-color: #282c34;
   color: white;
+  border-radius: 30px;
+  font-size: 1rem;
+  font-weight: bold;
+  letter-spacing: 1px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* media queries */
+@media (max-width: 500px) {
+  .form {
+    width: 380px;
   }
-  to {
-    transform: rotate(360deg);
+}
+@media (max-width: 400px) {
+  .form {
+    width: 90%;
+  }
+
+  button {
+    padding: 4px 50px;
+    font-size: 0.9rem;
   }
 }
