bg color change

--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,16 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 .App {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #282c34;
+  background-color: #e3e7ff;
 }
 
 .form {
@@ -37,6 +41,7 @@ form {
   flex-wrap: wrap;
   width: 80%;
   margin: auto;
+  margin-top: 30px;
 }
 
 div .sub {
